--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,10 +11,10 @@
     />
     <title>Booking Manager</title>
   </head>
-  <body class="relative overflow-hidden">
+  <body class="relative overflow-x-hidden">
     <div
       id="mobile-nav"
-      class="animate-slideup top-0 fixed w-screen h-screen bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-[999]"
+      class="overflow-x-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
     >
       <section>
         <div class="flex w-[90%] mx-auto justify-between p-6 items-center">
@@ -187,7 +187,7 @@
           src="./Assests/images/illustration-hero.svg"
         />
         <div
-          class="bg-softBlue w-[70%] h-[70%] absolute top-[20%] left-32 rounded-l-full right-0"
+          class="bg-softBlue w-[70%] h-[70%] left-56 absolute top-[20%] rounded-l-full right-0 overflow-x-hidden"
         ></div>
       </article>
     </main>
