--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="relative overflow-x-hidden">
     <div
       id="mobile-nav"
-      class="overflow-x-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
+      class="animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
     >
       <section>
         <div class="flex w-[90%] mx-auto justify-between p-6 items-center">
@@ -154,7 +154,7 @@
       </svg>
     </nav>
     <main
-      class="h-[500px] w-[100%] mx-auto flex flex-col lg:flex-row justify-between mt-28"
+      class="w-[100%] mx-auto flex flex-col lg:flex-row justify-between mt-28"
     >
       <section class="order-2 lg:order-1 flex-1 lg:ml-16 2xl:ml-36 mt-16">
         <h1 class="text-[40px] font-bold text-center lg:text-left">
@@ -187,7 +187,7 @@
           src="./Assests/images/illustration-hero.svg"
         />
         <div
-          class="bg-softBlue w-[70%] h-[70%] left-56 absolute top-[20%] rounded-l-full right-0 overflow-x-hidden"
+          class="bg-softBlue w-[70%] h-[70%] left-56 absolute top-[20%] rounded-l-full right-0"
         ></div>
       </article>
     </main>
