disable scroll on small devices

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="relative overflow-x-hidden">
     <div
       id="mobile-nav"
-      class="animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
+      class="overflow-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
     >
       <section>
         <div class="flex w-[90%] mx-auto justify-between p-6 items-center">
