Final push --lastone for this year :-)

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         ></div>
       </article>
     </main>
-    <section class="xl:w-[80rem] w-[90%] mx-auto lg:h-[500px] mt-16 relative">
+    <section class="xl:w-[80rem] w-[90%] mx-auto mt-16 relative">
       <h2 class="text-center text-veryDarkBlue text-3xl font-medium">
         Features
       </h2>
@@ -207,7 +207,7 @@
         so you can access them on the go.
       </p>
       <div
-        class="flex flex-col lg:flex-row justify-center gap-x-24 mt-16 items-center cursor-pointer"
+        class="flex flex-col lg:flex-row justify-center gap-x-32 mt-16 items-center cursor-pointer"
       >
         <div class="w-full lg:w-auto">
           <hr class="lg:hidden w-full mb-5" />
@@ -236,6 +236,48 @@
         <hr />
         <hr />
         <hr />
+      </div>
+    </section>
+    <section
+      class="xl:w-[80rem] w-[90%] mx-auto mt-24 lg:h-[500px] flex flex-col lg:flex-row justify-between"
+    >
+      <article id="tab-1" class="relative flex-1">
+        <img
+          class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-auto lg:right-auto lg:mx-0"
+          src="./Assests/images/illustration-features-tab-1.svg"
+        />
+        <div
+          class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
+        ></div>
+      </article>
+      <div id="tab-1-text" class="flex-1 mt-16 border border-red-600">
+        <h1></h1>
+      </div>
+
+      <article id="tab-2" class="relative flex-1 hidden">
+        <img
+          class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-16"
+          src="./Assests/images/illustration-features-tab-2.svg"
+        />
+        <div
+          class="absolute top-20 -translate-x-14 lg:-translate-x-[20%] left-0 bg-softBlue w-full lg:w-full md:w-[80%] h-[95%] lg:h-[70%] rounded-r-full z-10"
+        ></div>
+      </article>
+      <div id="tab-2-text" class="flex-1 mt-16 hidden">
+        <h1>Hello</h1>
+      </div>
+
+      <article id="tab-3" class="relative flex-1 hidden">
+        <img
+          class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:-left-4"
+          src="./Assests/images/illustration-features-tab-3.svg"
+        />
+        <div
+          class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
+        ></div>
+      </article>
+      <div id="tab-2-text" class="flex-1 mt-16 hidden">
+        <h1>Hello</h1>
       </div>
     </section>
     <script type="module" src="/main.js"></script>
