--- a/index.html
+++ b/index.html
@@ -162,12 +162,14 @@
         >
           A Simple Bookmark <br />Manager
         </h1>
-        <p class="ml-6 text-xl text-grayishBlue mt-10 text-center lg:text-left">
+        <p
+          class="ml-6 text-lg lg:text-xl text-grayishBlue mt-10 text-center lg:text-left"
+        >
           A clean and simple interface to organize your favourite
           <br class="hidden md:block" />
-          websites.Open a new browser tab and see you sites load
+          websites. Open a new browser tab and see you sites load
           <br class="hidden md:block" />
-          instantly.Try it for free.
+          instantly. Try it for free.
         </p>
         <div
           class="flex lg:ml-6 gap-x-4 mt-10 justify-center lg:justify-start w-[90%] mx-auto h-[70px]"
@@ -195,10 +197,12 @@
       </article>
     </main>
     <section class="xl:w-[80rem] w-[90%] mx-auto mt-16 relative">
-      <h2 class="text-center text-veryDarkBlue text-3xl font-medium">
+      <h2
+        class="text-center text-veryDarkBlue text-2xl lg:text-3xl font-medium"
+      >
         Features
       </h2>
-      <p class="text-center text-xl text-grayishBlue mt-9">
+      <p class="text-center text-lg lg:text-xl text-grayishBlue mt-9">
         Our aim is to make it quick and easy for you to access your
         <br class="hidden lg:block" />
         favourite websites.Your bookmark sync between your devices<br
@@ -211,21 +215,33 @@
       >
         <div class="w-full lg:w-auto">
           <hr class="lg:hidden w-full mb-5" />
-          <p class="text-center">Simple Bookmarking</p>
+          <p
+            class="text-center text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
+          >
+            Simple Bookmarking
+          </p>
           <div
             class="bg-softRed h-1 lg:-translate-x-[5.5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
           ></div>
           <hr class="lg:hidden w-full mt-5" />
         </div>
         <div class="w-full lg:w-auto">
-          <p class="text-center mt-5 lg:mt-0">Speedy Searching</p>
+          <p
+            class="text-center mt-5 lg:mt-0 text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
+          >
+            Speedy Searching
+          </p>
           <div
             class="bg-softRed h-1 lg:-translate-x-[4.5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
           ></div>
           <hr class="lg:hidden w-full mt-5" />
         </div>
         <div class="w-full lg:w-auto">
-          <p class="text-center mt-5 lg:mt-0">Easy Searching</p>
+          <p
+            class="text-center mt-5 lg:mt-0 text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
+          >
+            Easy Searching
+          </p>
           <div
             class="bg-softRed h-1 lg:-translate-x-[5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
           ></div>
@@ -241,7 +257,7 @@
     <section
       class="xl:w-[80rem] w-[90%] mx-auto mt-24 lg:h-[500px] flex flex-col lg:flex-row justify-between"
     >
-      <article id="tab-1" class="relative flex-1">
+      <article class="relative flex-1">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-auto lg:right-auto lg:mx-0"
           src="./Assests/images/illustration-features-tab-1.svg"
@@ -250,8 +266,30 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-1-text" class="flex-1 mt-16 border border-red-600">
-        <h1></h1>
+      <div id="tab-1-text" class="flex-1 mt-16 lg:ml-20">
+        <h3
+          class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
+        >
+          Bookmark in one click
+        </h3>
+        <p
+          class="text-grayishBlue text-center lg:text-left text-sm lg:text-xl mt-5"
+        >
+          Organize your bookmarks however you like. <br class="lg:hidden" />Our
+          <br class="hidden lg:block" />
+          simple drag-and-drop-interface gives <br class="lg:hidden" />you
+          complete
+          <br class="hidden lg:block" />
+          control over how you manage <br class="lg:hidden" />
+          your favourite sites.
+        </p>
+        <div class="flex justify-center lg:justify-start">
+          <button
+            class="bg-softBlue w-[114px] h-[50px] rounded-lg text-white mt-10 font-medium"
+          >
+            More Info
+          </button>
+        </div>
       </div>
 
       <article id="tab-2" class="relative flex-1 hidden">
@@ -276,10 +314,11 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-2-text" class="flex-1 mt-16 hidden">
+      <div id="tab-3-text" class="flex-1 mt-16 hidden">
         <h1>Hello</h1>
       </div>
     </section>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
