--- a/index.html
+++ b/index.html
@@ -216,33 +216,39 @@
         <div class="w-full lg:w-auto">
           <hr class="lg:hidden w-full mb-5" />
           <p
-            class="text-center text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
+            id="tab-1"
+            class="text-center text-veryDarkBlue hover:text-softRed transition-[color] duration-[0.3s]"
           >
             Simple Bookmarking
           </p>
           <div
-            class="bg-softRed h-1 lg:-translate-x-[5.5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
+            id="tab-1-underline"
+            class="bg-softRed h-1 lg:-translate-x-[5.5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute"
           ></div>
           <hr class="lg:hidden w-full mt-5" />
         </div>
         <div class="w-full lg:w-auto">
           <p
+            id="tab-2"
             class="text-center mt-5 lg:mt-0 text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
           >
             Speedy Searching
           </p>
           <div
+            id="tab-2-underline"
             class="bg-softRed h-1 lg:-translate-x-[4.5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
           ></div>
           <hr class="lg:hidden w-full mt-5" />
         </div>
         <div class="w-full lg:w-auto">
           <p
+            id="tab-3"
             class="text-center mt-5 lg:mt-0 text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
           >
             Easy Searching
           </p>
           <div
+            id="tab-3-underline"
             class="bg-softRed h-1 lg:-translate-x-[5rem] translate-y-5 lg:translate-y-7 w-[50%] mx-auto lg:w-[22%] lg:absolute hidden"
           ></div>
           <hr class="lg:hidden w-full mt-5" />
@@ -255,9 +261,11 @@
       </div>
     </section>
     <section
-      class="xl:w-[80rem] w-[90%] mx-auto mt-24 lg:h-[500px] flex flex-col lg:flex-row justify-between"
+      class="xl:w-[80rem] w-[90%] mx-auto mt-16 lg:mt-24 lg:h-[500px] flex flex-col lg:flex-row justify-between"
     >
-      <article class="relative flex-1">
+      <!-- Tab-1 -->
+
+      <article id="tab-1-img" class="relative flex-1">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-auto lg:right-auto lg:mx-0"
           src="./Assests/images/illustration-features-tab-1.svg"
@@ -292,7 +300,9 @@
         </div>
       </div>
 
-      <article id="tab-2" class="relative flex-1 hidden">
+      <!-- Tab-2 -->
+
+      <article id="tab-2-img" class="relative flex-1 hidden">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-16"
           src="./Assests/images/illustration-features-tab-2.svg"
@@ -301,11 +311,36 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[20%] left-0 bg-softBlue w-full lg:w-full md:w-[80%] h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-2-text" class="flex-1 mt-16 hidden">
-        <h1>Hello</h1>
+      <div
+        id="tab-2-text"
+        class="flex-1 mt-28 lg:mt-16 lg:translate-x-[25%] hidden"
+      >
+        <h3
+          class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
+        >
+          Intelligent search
+        </h3>
+        <p
+          class="text-grayishBlue text-center lg:text-left text-sm lg:text-xl mt-5"
+        >
+          Our powerful search will help find you saved
+          <br class="hidden lg:block" />
+          sites in no time at all. No need to trawl through all of
+          <br class="hidden lg:block" />
+          your bookmarks.
+        </p>
+        <div class="flex justify-center lg:justify-start">
+          <button
+            class="bg-softBlue w-[114px] h-[50px] rounded-lg text-white mt-10 font-medium"
+          >
+            More Info
+          </button>
+        </div>
       </div>
 
-      <article id="tab-3" class="relative flex-1 hidden">
+      <!-- Tab-3 -->
+
+      <article id="tab-3-img" class="relative flex-1 hidden">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:-left-4"
           src="./Assests/images/illustration-features-tab-3.svg"
@@ -314,8 +349,30 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-3-text" class="flex-1 mt-16 hidden">
-        <h1>Hello</h1>
+      <div id="tab-3-text" class="flex-1 mt-16 lg:translate-x-[20%] hidden">
+        <h3
+          class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
+        >
+          Share your bookmarks
+        </h3>
+        <p
+          class="text-grayishBlue text-center lg:text-left text-sm lg:text-xl mt-5"
+        >
+          Easily share your bookmarks and collections <br class="lg:hidden" />
+          with
+          <br class="hidden lg:block" />
+          Others. Create a shareable link that <br class="lg:hidden" />you can
+          send at
+          <br class="hidden lg:block" />
+          the click of a button
+        </p>
+        <div class="flex justify-center lg:justify-start">
+          <button
+            class="bg-softBlue w-[114px] h-[50px] rounded-lg text-white mt-10 font-medium"
+          >
+            More Info
+          </button>
+        </div>
       </div>
     </section>
 
