Fixed tab styling

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <hr class="lg:hidden w-full mb-5" />
           <p
             id="tab-1"
-            class="text-center text-veryDarkBlue hover:text-softRed transition-[color] duration-[0.3s]"
+            class="text-center text-grayishBlue hover:text-softRed transition-[color] duration-[0.3s]"
           >
             Simple Bookmarking
           </p>
