Added animations to tab

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Booking Manager</title>
   </head>
   <body class="relative overflow-x-hidden">
+    <!--Mobile Nav -->
     <div
       id="mobile-nav"
       class="overflow-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
@@ -89,6 +90,7 @@
         </svg>
       </footer>
     </div>
+    <!-- Desktop Nav -->
     <nav
       id="navbar"
       class="container flex w-[90%] lg:w-[80rem] mx-auto p-6 justify-between items-center"
@@ -196,6 +198,7 @@
         ></div>
       </article>
     </main>
+    <!-- Features Tab -->
     <section class="xl:w-[80rem] w-[90%] mx-auto mt-16 relative">
       <h2
         class="text-center text-veryDarkBlue text-2xl lg:text-3xl font-medium"
@@ -265,7 +268,7 @@
     >
       <!-- Tab-1 -->
 
-      <article id="tab-1-img" class="relative flex-1">
+      <article id="tab-1-img" class="relative flex-1 animate-slideright">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-auto lg:right-auto lg:mx-0"
           src="./Assests/images/illustration-features-tab-1.svg"
@@ -302,7 +305,7 @@
 
       <!-- Tab-2 -->
 
-      <article id="tab-2-img" class="relative flex-1 hidden">
+      <article id="tab-2-img" class="relative flex-1 hidden animate-slideright">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:left-16"
           src="./Assests/images/illustration-features-tab-2.svg"
@@ -340,7 +343,7 @@
 
       <!-- Tab-3 -->
 
-      <article id="tab-3-img" class="relative flex-1 hidden">
+      <article id="tab-3-img" class="relative flex-1 hidden animate-slideright">
         <img
           class="relative z-20 w-[90%] lg:w-auto left-0 right-0 mx-auto lg:-left-4"
           src="./Assests/images/illustration-features-tab-3.svg"
