Text fadein animation added

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </svg>
       </footer>
     </div>
+
     <!-- Desktop Nav -->
     <nav
       id="navbar"
@@ -155,6 +156,7 @@
         />
       </svg>
     </nav>
+
     <main
       class="xl:w-[80rem] w-[90%] mx-auto lg:h-[500px] flex flex-col lg:flex-row justify-between mt-16 lg:mt-28"
     >
@@ -198,6 +200,7 @@
         ></div>
       </article>
     </main>
+
     <!-- Features Tab -->
     <section class="xl:w-[80rem] w-[90%] mx-auto mt-16 relative">
       <h2
@@ -277,7 +280,7 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-1-text" class="flex-1 mt-16 lg:ml-20">
+      <div id="tab-1-text" class="flex-1 mt-16 lg:ml-20 animate-textfadein">
         <h3
           class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
         >
@@ -316,7 +319,7 @@
       </article>
       <div
         id="tab-2-text"
-        class="flex-1 mt-28 lg:mt-16 lg:translate-x-[25%] hidden"
+        class="flex-1 mt-28 lg:mt-16 lg:translate-x-[25%] animate-textfadein hidden"
       >
         <h3
           class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
@@ -352,7 +355,10 @@
           class="absolute top-20 -translate-x-14 lg:-translate-x-[25%] left-0 bg-softBlue w-full h-[80%] md:h-[95%] lg:h-[70%] rounded-r-full z-10"
         ></div>
       </article>
-      <div id="tab-3-text" class="flex-1 mt-16 lg:translate-x-[20%] hidden">
+      <div
+        id="tab-3-text"
+        class="flex-1 mt-16 lg:translate-x-[20%] hidden animate-textfadein"
+      >
         <h3
           class="text-veryDarkBlue text-2xl lg:text-3xl font-medium text-center lg:text-left"
         >
