Fixed height issue

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       </div>
     </section>
 
-    <section class="xl:w-[80rem] w-[90%] h-[500px] mt-36 lg:mt-0 mx-auto">
+    <section class="xl:w-[80rem] w-[90%] lg:h-[500px] mt-36 lg:mt-0 mx-auto">
       <h4 class="text-center text-2xl lg:text-3xl font-medium">
         Download the extension
       </h4>
@@ -404,7 +404,7 @@
 
       <!-- Extension section -->
       <div
-        class="mx-auto w-full items-center lg:w-[80%] lg:h-[500px] mt-10 flex flex-col lg:flex-row justify-evenly"
+        class="mx-auto w-full items-center lg:w-[80%] h-auto lg:h-[500px] mt-10 flex flex-col lg:flex-row justify-evenly"
       >
         <div
           class="w-[300px] h-[400px] shadow-xl rounded-lg flex flex-col items-center"
