Fixed overflow issue

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     />
     <title>Booking Manager</title>
   </head>
-  <body class="relative overflow-x-hidden">
+  <body class="relative overflow-x-hidden lg:overflow-x-visible">
     <!--Mobile Nav -->
     <div
       id="mobile-nav"
-      class="overflow-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden z-50"
+      class="overflow-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden lg:hidden z-50"
     >
       <section>
         <div class="flex w-[90%] mx-auto justify-between p-6 items-center">
