--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Mobile Nav -->
     <div
       id="mobile-nav"
-      class="overflow-hidden animate-slideup top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden lg:hidden z-50"
+      class="overflow-hidden animate-slideleft top-0 left-0 fixed w-screen h-full bg-veryDarkBlue bg-opacity-90 flex-col justify-between hidden lg:hidden z-50"
     >
       <section>
         <div class="flex w-[90%] mx-auto justify-between p-6 items-center">
@@ -597,6 +597,33 @@
         </div>
 
         <hr class="mt-6 md:w-[60%] w-full mx-auto" />
+      </div>
+
+      <div class="w-[50%] mx-auto h-44 flex justify-center items-center">
+        <button
+          class="text-white font-bold h-[50px] w-[114px] bg-softBlue rounded-lg"
+        >
+          More
+        </button>
+      </div>
+    </section>
+
+    <!-- Contact us section -->
+
+    <section
+      class="w-full h-[380px] bg-softBlue flex justify-center items-center"
+    >
+      <div>
+        <p
+          class="text-white font-medium text-center text-xs lg:text-sm tracking-[0.3rem] mb-5"
+        >
+          35,000+ ALREADY JOINED
+        </p>
+        <p class="text-white text-3xl text-center font-medium tracking-wider">
+          Stay up-to-date with what <br class="hidden lg:block" />
+          we're doing
+        </p>
+        <div class="w-full border border-red-600 mx-auto h-24 mt-5"></div>
       </div>
     </section>
 
