Removed tap highlight

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
           Stay up-to-date with what <br class="hidden lg:block" />
           we're doing
         </p>
-        <div class="w-full border border-red-600 mx-auto h-24 mt-5"></div>
+        <div class="w-full mx-auto mt-5"></div>
       </div>
     </section>
 
